Bug 585558 - Implement properties for easier visible tab access via JS and CSS. Written by Adam Dane [:hobophobe]. Bug 738491 - Adjust tab strip background for Aero glass as part of the Australis theme. Written by Joshua H [:soapy]. Bug 738491 - Implement the Australis tab shape for Windows. Written by Frank Yan [:fryn] and Jared Wein [:jaws].

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -35,7 +35,7 @@ tabbrowser {
 
 .tabbrowser-tab:not([pinned]) {
   -moz-box-flex: 100;
-  max-width: 250px;
+  max-width: 210px;
   min-width: 100px;
   width: 0;
   -moz-transition: min-width 200ms ease-out,
